# VSB-ANOI

./: CMakeLists.txt  README.md  main.cpp
BackPropagation/: NeuralNetwork.cpp  NeuralNetwork.h
Imaging/: BlobDetector.cpp  BlobDetector.h  Classfier.cpp  Classfier.h  Ethanol.cpp  Ethanol.h  ImgObject.h  Indexing.cpp  Indexing.h  Kmeans.cpp  Kmeans.h  Threshold.cpp  Threshold.h
Structures/: Centroid.cpp  Centroid.h  ImgObject.cpp  ImgObject.h  MyException.cpp  MyException.h  ObjectTyp.cpp  ObjectTyp.h  Point.cpp  Point.h
Utils/: Utils.cpp  Utils.h
